      non-functional. optimrx has a more extensive set of solvers and lives
      (at 2016-7-11) on R-forge. The test scripts in the tests directory have
      a "0" at the end of the script name e.g. hobbs15b0.R for optimr because
      of the appropriate library() call. 

TODO
      o Seems to be a printout of maxit that should be conditional (171007)
      o Drop nmkb from methods for bounds if start is on bound
      o Troubles with NAMESPACE collisions NOT resolved. (nloptr ??)
      o Add nloptr methods -- there are a number and we need to choose how
	to do so. Seems unable to handle parameter scaling or dot arguments
      o Consider how the hyperbolic transformation (transfinite fn)
        could be used in all unconstrained methods
      o How can transfinite be made to work when start is on bounds?
	To work when end is on bounds?
      o Rcgmin seems to report reset of parameters to bounds when parameter
        is apparently on the bound. Could have rounding issues, and should
        avoid this warning if it is really not needed.
      o Do NOT add ipoptr until non-standard install is fixed up.
      o Note axsearch() is in the optextras package, but needs a good test.
        May want to include a maximization test too.
      o trig1507.R issue of bounds to avoid multiple minima, note ttrig8b lbfgsb3 etc.
      o grchk() -- can it be cleaned up -- it is in optextras
      o Put counters in efn, egr ??
      o Check all failures reported below are fixed!

VERSION 2017-09-24
      o comments include 2017-09-18 version
      o brought optimx solvers into optimr and added check that packages 
        are available
      o Fix for lbfgsb3 which was changed at same time to correct and
        simplify some control parameters

VERSION 2017-04-05
      o allowed hessian in opm() and optimr() (for nlm)

VERSION 2017-02-15
      o added subplex method

VERSION 2016-09-16
      o Harry Joe reported troubles with numerical gradient approximations. Found